<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.phasetwo.keycloak</groupId>
  <artifactId>keycloak-magic-link</artifactId>
  <packaging>jar</packaging>
  <version>0.33-SNAPSHOT</version>

  <parent>
    <groupId>com.github.xgp</groupId>
    <artifactId>oss-parent</artifactId>
    <version>0.7</version>
  </parent>
  
  <developers>
    <developer>
      <name>Phase Two, Inc.</name>
      <url>https://github.com/p2-inc</url>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Elastic License v2</name>
      <url>https://raw.githubusercontent.com/elastic/elasticsearch/main/licenses/ELASTIC-LICENSE-2.0.txt</url>
    </license>
  </licenses>
  
  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <main.java.package>io.phasetwo.keycloak.magic</main.java.package>
    <junit.version>4.13.2</junit.version>
    <keycloak.version>26.0.0</keycloak.version>
    <lombok.version>1.18.34</lombok.version>
    <auto-service.version>1.1.1</auto-service.version>
    <ossrh.url>https://s01.oss.sonatype.org</ossrh.url>
  </properties>

  <scm>
    <url>https://github.com/p2-inc/keycloak-magic-link</url>
    <connection>scm:git:git@github.com:p2-inc/keycloak-magic-link.git</connection>
    <tag>HEAD</tag>
  </scm>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
	  <compilerArgument>-Xlint:unchecked</compilerArgument>
	  <compilerArgument>-Xlint:deprecation</compilerArgument>
          <useIncrementalCompilation>false</useIncrementalCompilation>
	  <annotationProcessorPaths>
            <path>
	      <groupId>com.google.auto.service</groupId>
	      <artifactId>auto-service</artifactId>
	      <version>${auto-service.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.fizzed</groupId>
        <artifactId>fizzed-versionizer-maven-plugin</artifactId>
        <version>1.0.6</version>
        <executions>
          <execution>
            <id>generate-version-class</id>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <javaPackage>${main.java.package}</javaPackage>
          <versionCommit>${buildNumber}</versionCommit>
        </configuration>
      </plugin>
      <plugin> <!-- pretty up the code using google java standards `mvn fmt:format` -->
        <groupId>com.spotify.fmt</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.23</version>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
    <!-- annotation processing helpers for logging and services -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.auto.service</groupId>
      <artifactId>auto-service</artifactId>
      <version>${auto-service.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- keycloak deps -->
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-server-spi</artifactId>
      <version>${keycloak.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-server-spi-private</artifactId>
      <version>${keycloak.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-services</artifactId>
      <version>${keycloak.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>33.0.0-jre</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
      <version>3.0.2</version>
      <scope>provided</scope>
    </dependency>

    <!-- testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
